--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.springframework.boot' version '2.2.2.RELEASE'
+     id 'com.google.cloud.tools.jib' version '2.1.0'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
 }
@@ -12,6 +13,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+jib.to.image = 'gcr.io/gcloud-example-263116/spring-boot-event-listener:v1'
 
 dependencies {
     // tag::actuator[]
